frontend/src/styles/main.css
html, body, #app {
  margin: 0;
  padding: 0;
  border: 0;
  font-family: 'Jura', sans-serif;
  min-height: 100dvh;
  font-weight: 600;
  scrollbar-color: var(--colors-background-600) var(--colors-background-200);
  .dark & {
    scrollbar-color: var(--colors-background-300) var(--colors-background-800);
  }
}

button, input, select, textarea {
  font-family: inherit;
}

input, textarea {
  @apply text-muted;
  border: 1px solid var(--colors-background-300);
  background: var(--colors-background-100);
  .dark & {
    border: 1px solid var(--colors-background-700);
    background: var(--colors-background-800);
  }
}

